made small bug on closing popup after scheduling shift

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -21,11 +21,7 @@
     margin: auto;
     text-align: center;
     background: white;
-    border-radius: 10px;
-    background: #000046;  
-    background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  
-    background: linear-gradient(to right, #1CB5E0, #000046); 
-
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   } 
 
 .popup_css-enter {
